仮実装（デモ状態）

--- a/docs/要件定義書.md
+++ b/docs/要件定義書.md
@@ -189,3 +189,22 @@
 - なつき度、時間、状況に応じて行動確率を調整
 - ユーザーの離脱パターンを学習し、行動を適応
 - セッション毎にねこの行動パターンが進化
+
+### ステップ1でのスコープ
+全て-1~1の値とする
+
+- 内部状態
+  - なつき度：ねこアクションがお腹見せorおもちゃにじゃれる => +
+  - 遊びたい度：ねこアクションがおもちゃにじゃれる => -
+  - 恐怖：ユーザと過ごすと+, ねこアクションがお腹見せorおもちゃにじゃれると => +
+- 感情
+  - 快：なつき度と恐怖の平均
+  - 覚醒：遊びたい度と一致
+  - 安心：なつき度と恐怖の平均
+  - 親和：なつき度と一致
+  - 身体的不快：0固定
+- ねこアクション（各値のソフトマックスに従った確率によって、アクションを選択する）
+  - お腹見せ：快、安心、親和の平均
+  - おもちゃにじゃれる・追いかける：覚醒と一致
+  - お座り：0
+  - 逃げる・隠れる：快と安心の平均のマイナス1倍
