設計書類をコミット

--- a/docs/要件定義書.md
+++ b/docs/要件定義書.md
@@ -87,11 +87,34 @@
 
 ### 愛でる（一緒に過ごす）
 
-- デフォルトのホーム画面状態
+- ~~デフォルトのホーム画面状態~~ →スコープ2以降で、遠くから見つめるアクションをデフォルトとする。
 - ユーザーはアバターを操作してねこの近くにいることができる
 - ねこはユーザーの位置、なつき度に応じて行動を変える
 - 一緒に過ごす時間に応じてなつき度が徐々に上がる
 - ねこは学習により、ユーザーの行動パターンに適応する
+
+#### UC: 開始する
+- システムはホーム画面を表示する。
+- ユーザーはフッターの「愛でる」ボタンを押す
+- システムは、外部状態を初期化して、ねこの内部状態を取得し、「愛でる」画面を表示して、ゲームを起動する
+  - UC: 「ゲームをする」をinvokeする
+
+**代替コース**
+- ユーザーがログインしていない：システムは、ログイン画面を表示する
+- 初めに、ホーム画面以外の画面を表示している：フッターのあるすべての画面において、ユーザーはフッターの「愛でる」ボタンを押す
+- ねこの内部状態が取得できない：システムは、ねこの情報が取得できない旨を表示し、「ホーム画面」を表示する
+
+#### UC: ゲームをする
+- システムは「愛でる」画面を表示する
+- ユーザーはアナログスティックを上下左右に動かす
+- システムは、ユーザー位置を更新する。外部状態・内部状態・ねこの好み・ねこの経験に応じて、ねこのアクションを決定する（詳細ロジックはUCでは記述しない）
+
+**代替コース**
+- ユーザーはアナログスティックを動かさない：システムは、ユーザーの位置の更新はせず、ねこのアクションを決定する。
+
+#### UC: 終了する
+- ユーザーは、画面の「終了」ボタンを押す
+- システムは、ねこの状態を保存し、ゲームを終了する。「ホーム画面」を表示する。
 
 ### 声かけ・叱る
 
@@ -101,7 +124,6 @@
 - 適切な声かけはなつき度を向上させる
 
 ### おもちゃを選ぶ
-
 - ユーザーは、遊ぶ際に使用するおもちゃを選択する。
 - おもちゃは以下の属性を持ち、ねこはそれぞれの好みを持つ
   - 見た目
@@ -208,3 +230,26 @@
   - おもちゃにじゃれる・追いかける：覚醒と一致
   - お座り：0
   - 逃げる・隠れる：快と安心の平均のマイナス1倍
+
+## セッション定義
+スコープ1では、全てCookieに保存する
+
+- 匿名UUID Cookie（初回アクセスから6ヶ月を有効期間とする。初回アクセスで発行し、再アクセス時には再発行しない）
+  - UUID：統計目的に利用する
+- Iron Session
+  - ユーザー情報：ユーザー情報を格納する（ユーザー名のみ）
+  - ゲーム情報：ねこの内部状態を格納する
+
+## ロギング戦略
+スコープ1では、SPAで完結する実装になっているが、アクセス記録やエラーログなどはサーバーに送って永続化したい。そこで、APIルートを通るときは必ずログを取るようにする：
+- サインアップ、ログアウト
+- ねこ状態の取得、保存（ゲームの開始、終了タイミングを含む）
+- エラーログ（現状はAPIをたたかないので、/logを明示的に呼び出す。
+
+また、本筋の処理に影響がないように、非同期実行でログをする。ログの保存に失敗してもリカバリは行わないものとする。
+
+アクセス記録として保存するのは、以下の項目とする
+- タイムスタンプ
+- 匿名UUID（統計用）
+- 呼び出しAPI名
+- リクエストボディ
